RESOLVED FIXED58760
JSC no longer builds with Clang due to -Woverloaded-virtual warning
https://bugs.webkit.org/show_bug.cgi?id=58760
Summary JSC no longer builds with Clang due to -Woverloaded-virtual warning
Cameron Zwarich (cpst)
Reported 2011-04-17 21:04:41 PDT
JSC no longer builds with clang because of a -Woverloaded-virtual warning from an overload of JSValue::put().
Attachments
Proposed patch (3.72 KB, patch)
2011-04-17 21:07 PDT, Cameron Zwarich (cpst)
mitz: review+
Cameron Zwarich (cpst)
Comment 1 2011-04-17 21:07:20 PDT
Created attachment 89986 [details] Proposed patch
mitz
Comment 2 2011-04-17 21:12:42 PDT
Comment on attachment 89986 [details] Proposed patch Thank you!
Cameron Zwarich (cpst)
Comment 3 2011-04-17 22:19:56 PDT
Fixed in r84121.
WebKit Review Bot
Comment 4 2011-04-18 01:38:08 PDT
http://trac.webkit.org/changeset/84121 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.