Reviewed by Dan Bernstein.

JSC no longer builds with Clang due to -Woverloaded-virtual warning
https://bugs.webkit.org/show_bug.cgi?id=58760

Rename Structure's specificValue overload of put to putSpecificValue to avoid
Clang's warning for overloading a virtual function.

* runtime/Structure.cpp:
(JSC::Structure::addPropertyTransition):
(JSC::Structure::addPropertyWithoutTransition):
(JSC::Structure::putSpecificValue):
* runtime/Structure.h:


Canonical link: https://commits.webkit.org/73862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84121 268f45cc-cd09-0410-ab3c-d52691b4dbfc